--- a/11_1~12_4.md
+++ b/11_1~12_4.md
@@ -1,330 +1,485 @@
-## 11.2 객체
+# 16장 프로퍼티 어트리뷰트
 
-- 프로퍼티
-  - 동적으로 추가되고 삭제할 수 있음
-  - 프로퍼티의 값은 제약이 없음
-- 객체 공간의 크기는 사전에 정해 둘 수 없음
-- 객체의 관리 방식
-  - 해시 테이블과 유사한 방식으로 프로퍼티를 관리하지만, 일반적인 해시 테이블 보다 나은 방법으로 객체를 구현 함
-  - 일반적인 클래스 기반의 객체지향 언어에서는 프로퍼티를 동적으로 추가/삭제하는 것이 불가능
-  - 자바스크립트의 경우는 동적으로 프로퍼티를 추가/삭제 할 수 있지만, 생성과 접근에 더 많은 비용이 든다.
-  - V8 엔진에서는 프로퍼티에 접근하기 위해 동적 탐색 대신에 `히든 클래스`라는 방식을 사용해서 높은 성능을 낸다.
-    -  https://engineering.linecorp.com/ko/blog/v8-hidden-class/
+## 16.1 내부 슬롯과 내부 메서드
 
-### 11.2.1 변경 가능한 값
+내부 슬롯(internal slot), 내부 메서드(internal method)
 
-객체(참조) 타입의 값, 즉 객체는 변경 가능한 값이다.
+- 자바스크립트 엔진의 구현 알고리즘을 설명하기 위해 ECMAScript 사양에서 사용하는 의사 프로퍼티와 의사 메서드
 
-- 원시 타입 값을 할당한 변수 : 변수가 가리키는 메모리 공간 자체에 값이 담겨 있음
-- 참조 타입 값을 할당한 변수 : 변수가 가리키는 메모리 공간에는 실제 참조될 객체가 있는 주소 메모리 공간 값을 가지고 있음
-  - 실제 참조될 객체의 메모리 공간 주소를 `참조 값`  이라 함
-  - 객체를 할당한 변수를 참조하면, 메모리에 저장되어 있는 참조 값을 통해 실제 객체에 접근
+- 이중 대괄호로 감싼 이름
 
-![](images/11_1~12_4/memory7-20210815170919379.jpg)
+- ECMAScript 사양에 정의된 대로 구현되어 자바스크립트 엔진에서 실제로 동작
 
-- 원시 값은 변경이 불가능하기 때문에 변수의 값을 변경하기 위해 재할당을 해야함 
+- 개발자가 직접 접근하도록 외부로 공개된 객체의 프로퍼티는 아님
 
-- 객체는 변경 가능한 값이기 때문에 변수의 값을 변경시에 재할당이 필요 없음
+- 종종 간접적으로 접근할 수 있는 수단을 제공함
 
-  - 즉, 재할당 없이 프로퍼티를 동적으로 추가/삭제/갱신 할 수 있음
-  - 프로퍼티를 변경하더라도 객체를 할당한 변수의 참조 값은 변경되지 않음
+  - `[[Prototype]]` 내부 슬롯 : 원칙적으로 직접 접근할 수 없지만, `__proto__` 를 통해 간접적으로 접근할 수 있음
 
-- 객체는 값을 변경 할 수 있기 때문에 성능적으로는 유리하지만, 부작용도 있다.
-
-  - 여러개의 식별자가 하나의 객체를 공유할 수 있기 때문에 문제가 발생함
-
-  ![Python의 얕은 복사 및 전체 복사](images/11_1~12_4/1*ZxQsWfxGQ8zhaMDP2-1P6Q.jpeg)
-
-  - 얕은 복사 : 얕은 복사는 객체가 중첩되어 있어도 한 단계까지만 복사를 함
-
-  - 깊은 복사 : 깊은 복사는 중첩되어 있는 객체까지 모두 복사함
-
-    ```js
-    const o = {x: {y: 1}};
+    ``` js
+    const o = {}
     
-    //shallow copy
-    const c1 = { ...o };
-    console.log(o === c1) // false
-    console.log(o.y === c1.y) // true
+    o.[[Prototype]] // Error : Unexprected totken '['
     
-    //shallow copy
-    const c2 = _.cloneDeep(o);
-    console.log(o === c2) // false
-    console.log(o.y === c2.y) // false
+    o.__Prototype__ // Object.prototype 
     ```
 
-  - 얕은 복사와 깊은 복사 모두 원복 객체와는 다른 객체이다
+## 16.2 프로퍼티 어트리뷰트와 프로퍼티 디스크립터 객체
 
-  - 프로퍼티로 중첩된 객체가 존재한다면, 얕은 복사의 경우 중첩된 객체에 대해서는 원본과 같은 객체를 가리킨다.
+자바스크립트 엔진은 프로퍼티를 생설할 때 **프로퍼티의 상태**를 나타내는 `프로퍼티 어트리뷰트`를 기본값으로 **자동 정의**함
 
-### 11.2.2 참조에 의한 전달
+**프로퍼티의 상태**
 
-여러개의 식별자가 하나의 객체를 공유할 떄 생길 수 있는 부작용
+- 값(value)
+- 값의 갱신 가능 여부(writable)
 
-```js
-var me = {
-  name: 'Jimmy'
-};
+- 열거 가능 여부(enumerable)
+- 재정의 가능 여부(configurable)
 
-var person = me; // shallow copy
-```
+**프로퍼티 어트리뷰트** 
 
-![img](images/11_1~12_4/스크린샷 2020-11-02 오후 1.28.00.png)
+- 자바스크립트 엔진이 관리하는 내부 상태 값(meta-property)인 `내부 슬롯 ([[Value]], [[Writable]], [[Enumerable]], [[Configurable]])` 이다.
 
-- me가 참조하는 객체의 참조 값(객체의 메모리 주소)을 person에 할당함
+- 내부 슬롯이기 때문에 직접 접근할 수 없지만, Object.getOwnPropertyDescriptor 메서드를 사용하여 간접적으로 확인 가능
 
-- 즉, me와 person은 같은 객체를 참조하게 됨
+- `Object.getOwnPropertyDescriptor(객체의 참조, 프로퍼티의 키)`
 
-- 같은 객체를 공유할 경우, 한 쪽에서 객체의 프로퍼티를 변경하면 서로 영향을 받게 됨
+  - 프로퍼티 어트리뷰트 정보를 제공하는 `프로퍼티 디스크립터 객체`를 반환
 
-  ```js
-  var me = {
-    name: 'Jimmy'
-  };
-  
-  var person = me; // shallow copy
-  
-  console.log(me === person); // true
-  
-  me.name = "Jordy";
-  person.address = "Seoul";
-  
-  console.log(me); // {name: : "Jordy", address : "Seoul"}
-  console.log(person); // {name: : "Jordy", address : "Seoul"}
-  ```
+    ```js
+    const person = {
+      name: 'Lee'
+    }
+    
+    // name 프로퍼티에 해당하는, 프로퍼티 어트리뷰트 정보를 제공하는 프로퍼티 디스크립터 객체를 반환
+    console.log(Object.getOwnPropertyDescriptor(person, 'name'));
+    // {value: "Lee", writble: true, enumerable: true, configurable: true}
+    ```
 
-- 참조에 의한 전달은 사실, 값에 의한 전달과 동일함
-  - 객체가 저장되어 있는 주소를 복사한다는 차이점만 빼면 똑같은 매커니즘으로 복사가 이루어짐
-  - 즉, 자바스크립트에는 사실 참조에 의한 전달은 존재하지 않고, 값에 의한 전달 만이 존재한다고 볼 수 있다.
-  - 공유에 의한 전달이라고 표현하는 경우도 있음
+- `Object.getOwnPropertyDescriptors(객체의 참조)`
 
-# 12. 함수
+  - 모든 프로퍼티의 프로퍼티 어트리뷰트 정보를 제공
 
-## 12.1 함수란?
+    ```js
+    const person = {
+      name: 'Lee'
+    }
+    
+    person.age = 20;
+    
+    // name 프로퍼티에 해당하는, 프로퍼티 어트리뷰트 정보를 제공하는 프로퍼티 디스크립터 객체를 반환
+    console.log(Object.getOwnPropertyDescriptor(person, 'name'));
+    /* 
+    {
+    	name: {value: "Lee", writble: true, enumerable: true, configurable: true},
+    	age: {value: 20, writble: true, enumerable: true, configurable: true}	
+    }
+    ```
 
-함수 : 입력을 받아 출력을 내보내는 일련의 과정을 정의한 것
+## 16.3 데이터 프로퍼티와 접근자 프로퍼티
 
-```js
-function add(x,y) {
-  return x+y;
-}
+**프로퍼티 종료**
 
-add(2,5);
-```
+- 데이터 프로퍼티
+  - 키와 값으로 구성된 일반적인 프로퍼티
+- 접근자 프로퍼티
+  - 자체적으로 값을 갖지 않고 다른 데이터 프로퍼티의 값을 읽거나 저장할 때 호출되는 접근자 함수(accessor function)로 구성된 프로퍼티
 
-- add : 함수이름
-- x,y : 매개변수
-- x+y : 반환값
-- function {~} : 함수 정의
-- add(2,5) : 함수 호출
+### 16.3.1 데이터 프로퍼티
 
-함수를 정의하고, 함수 이름으로 인수를 매개변수를 통해 함수에 전달하여 함수를 호출하고, 함수는 정의된 대로 동작한 후 값을 반환한다.
+데이터 프로퍼티는 다음과 같은 프로퍼티 어트리뷰트를 가짐
 
-## 12.2 함수를 사용하는 이유
+| 프로퍼티 어트리뷰트 | 프로퍼티 디스크립터 객체의 프로퍼티 | 설명                                                         |
+| ------------------- | ----------------------------------- | ------------------------------------------------------------ |
+| [[Value]]           | value                               | - 프로퍼티에 접근하면 반환되는 값 <br />- 프로퍼티 값을 변경하면 [[Value]]에 값을 재할당<br />- 프로퍼티가 없으면 프로퍼티를 동적 생성하고 생성된 프로퍼티의 [[Value]]에 값을 저장 |
+| [[Writable]]        | writable                            | - 프로퍼티의 값 변경 가는 여부를 나타내는 불리언 값<br />- false인 경우 해당 프로퍼티는 읽기 전용이다. |
+| [[Enumerable]]      | enumerable                          | - 프로퍼티의 열거 가능 여부를 나타내는 불리언 값<br />- false인 경우 for ... in 문이나, Object.keys 메서드 등으로 열거할 수 없음 |
+| [[Configurable]]    | configurable                        | - 프로퍼티의 재정의 가능 여부를 나타내는 불리언 값<br />- false인 경우 프로퍼티 삭제, 프로퍼티 어트리뷰트 갑스이 변경이 금지됨<br />- 단, [[Writable]]이 true인 경우, [[value]]의 변경과 [[Writable]]을 false로 변경하는 것은 허용 됨 |
 
-- 코드의 재사용성 : 동일한 기능을 하는 경우 코드를 중복으로 작성하지 않고 함수를 호출하면 됨
-- 유지보수의 편의성 : 기능을 수정할 경우 함수 하나만 수정하면 됨
-- 코드의 신뢰성 : 실수가 줄어듦
-- 코드의 가독성 : 코드를 읽지 않고 함수이름만 보고도 기능을 유추할 수 있음
+### 16.3.2 접근자 프로퍼티
 
-## 12.3 함수 리터럴
+접근자 프로퍼티는 자체적으로 값을 갖지 않고 다른 `데이터 프로퍼티의 값을 읽거나 저장할 때 사용하는 접근자 함수`로 구성된 프로퍼티
 
-- 자바스크립트의 함수는 객체
+| 프로퍼티 어트리뷰트 | 프로퍼티 디스크립터 객체의 프로퍼티 | 설명                                                         |
+| ------------------- | ----------------------------------- | ------------------------------------------------------------ |
+| [[Get]]             | get                                 | - 접근자 프로퍼티를 통해 데이터 프로퍼티의 값을 읽을 때 호출되는 접근자 함수<br />- 접근자 프로퍼티 키로 프로퍼티 값에 접근하면 프로퍼티 어트리뷰트 [[Get]]의 값, 즉 getter 함수가 호출 되고 그 결과가 프로퍼티 값으로 반환됨 |
+| [[Set]]             | set                                 | - 접근자 프로퍼티를 통해 데이터 프로퍼티의 값을 저장할 때 호출되는 접근자 함수<br />- 접근자 프로퍼티 키로 프로퍼티 값을 저장하면 프로퍼티 어트리뷰트 [[Set]]의 값, 즉 setter 함수가 호출되고 그 결과가 프로퍼티 값으로 저장됨 |
+| [[Enumerable]]      | enumerable                          | -  데이터 프로퍼티의 [[Enumerable]]과 같다.                  |
+| [[Configurable]]    | configurable                        | -  데이터 프로퍼티의 [[Configurable]]과 같다.                |
 
-- 함수도 객체 처럼 함수 리터럴로 생성할 수 있음
-
-- 함수 리터럴
-
-  function 키워드, 함수 이름, 매개변수 목록, 함수 몸체로 구성
-
-  ```js
-  // 변수에 함수 리터럴을 할당
-  var f = function add(x, y) {
-    return a+b;
-  };
-  ```
-
-- 함수 리터럴 구성 요소
-
-  - 함수 이름
-    - 식별자 네이밍 규칙을 준수
-    - 함수 이름은 함수 몸체 내에서만 촘조할 수 있는 식별자
-    - 함수 이름은 생략가능하고, 이름이 있는 함수를 기명함수, 없는 함수를 무명/익명 함수라 함
-  - 매개변수 목록
-    - 0개 이상의 매개변수를 소괄호로 감싸고 쉼표로 구분
-    - 순서에 의미가 있다.
-    - 매개변수는 함수 몸체 내에서 변수와 동일하게 취급
-  - 함수 몸체
-    - 함수가 호출되었을 때 일괄적으로 실행될 문들을 하나의 실행단위로 정희한 코드 블록
-    - 함수 몸체는 함수 호출에 의해 실행됨
-
-- 리터럴은 값을 생성하기 위한 표기법으로, 함수 리터럴도 평가되어 값을 생성하고, 이 값은 객체가 된다. 즉, 함수는 객체이다.
-
-- 함수는 객체이면서 일반적인 객체와는 다르다.
-
-  - 객체는 호출할 수 없지만, 함수는 호출할 수 있음
-  - 함수만의 고유한 프로퍼티가 존재함
-
-## 12.4 함수 정의
-
-함수를 정의하는 4가지 방법이 있음
-
-- 함수 선언문 : `function add(x, y) { return x + y; }`
-- 함수 표현식 : ` var add = function (x, y) { return x + y; };`
-- Function 생성자 함수 : `var add  = new Function('x', 'y', 'return x + y');
-- 화살표 함수(ES6) : `var add = (x, y) => x + y`
-
-함수 정의 방식에 따른 미묘한 차이가 존재한다.
-
-### 12.4.1 함수 선언문
+접근자 함수는 getter/setter 함수라고도 부르고, 둘 중 하나만 정의할 수도 있다.
 
 ```js
-//함수 선언문
-function add(x, y) {
-  return x + y;
-}
-
-// 함수 참조 cf. console.dir 은 함수 객체의 프로퍼티까지 출력함
-console.dir(add); // f add(x, y)
-
-// 함수 호출
-console.dir(add(2, 5)); // 7
-```
-
-함수 선언문은 함수 리터럴과 형태가 동일함
-
-- 단, 함수 리터럴은 함수 이름을 생략할 수 있으나 함수 선언문은 함수 이름을 생략할 수 없음
-
-`함수 선언문은 표현식이 아닌 문이다.` 
-
-- 크롬 개발자 도구의 콘솔에서 함수 선언문 작성하면, 완료 값으로  `undefined`가 출력된다. 함수 선언문이 만약 표현식인 문이라면 완료 값 undefiend 대신 표현식이 평가되어 생성된 함수가 출력되어야 함
-
-- 표현식인 문과 표현식이 아닌문의 차이는, 변수의 할당 가능 여부이고, 표현식만이 변수에 할당이 가능하다. 하지만 아래는 함수 선언문이 변수에 할당되는 것 처럼 보인다.
-
-  ```js
-  var add = function add(x, y) {
-    return x + y;
-  };
+const person = {
+  firstName: 'Ungmo',
+  lastName: 'Lee',
   
-  console.dir(add(2, 5)); // 7
-  ```
-
-  이렇게 동작하는 이유는 자바스크립트 엔진이 코드의 문맥에 따라 동일한 함수 리터럴을 다르게 해석하기 떄문이다. 즉, 위의 경우에는 문맥상 함수 선언문으로 판단하기 보다는 `함수 리터럴` 로 판단하고 있는 것이다.
-
-  기명 함수 리터럴은 이처럼 중의적인 코드이다. 변수에 할당되면 함수 리터럴 표현식으로 해석되고, 단독으로 쓰이면 함수 선언문으로 해석된다.
-
-  이 둘은 함수를 생성하는 내부 동작에서 차이가 존재한다.
-
-  ```js
-  // 함수 선언문 (함수 이름 생략 불가능)
-  function foo() { console.log('foo') }
-  foo(); // foo
-  
-  // 함수 리터럴 : 함수 리터럴을 피연산자로 사용하면 함수 선언문이 아닌 함수 리터럴 표현식으로 해석됨 (함수 이름 생략 가능)
-  (function bar() { console.log('bar'); });
-  bar(); // ReferenceError: bar is not defined
-  ```
-
-  - 소괄호 안에서 함수 리터럴은 함수 리터럴 표현식으로 해석됨. (그룹 연산자의 피연사자는 값으로 평가될 수 있는 표현식이어야 함)
-  - 왜 foo는 호출이 되고, bar는 호출이 안될까?
-    - 함수 리터럴에서의 "함수 이름은 `함수 몸체` 내에서만 참조할 수 있는 식별자"라고 했는데, 이는 함수 외부에서는 함수 이름을 참조할 수 없다는 의미이다. 즉, bar 함수를 호출할 수 없다.
-    - 그렇다면, foo는 어떻게 식별자가 생성이 되었을까? 이는 자바스크립트 엔진이 암묵적으로 식별자를 생성해주기 때문이다. 자바스크립트 엔진은 함수 선언문으로 함수를 생성하면, 함수 이름으로 변수를 만들어주고 함수 객체를 참조하도록 참조 값을 할당한다.
-
-### 12.4.2 함수 표현식
-
-자바스크립트의 함수는 일급객체 => 즉, 변수에 할당이 가능하다.
-
-- 리터럴로 생성한 함수 객체를 변수에 할당
-
-  ```js
-  var add = function(x,y) {
-    return x + y;
+  //fullName은 접근자 함수로 구성된 접근자 프로퍼티
+  get fullName() {
+    return `${this.firstName} ${this.lastName}`
   }
-  ```
-
-  - 함수 표현식의 함수 리터럴은 함수 이름을 생략하는 것이 일반적임
-
-함수 선언문과 함수 표현식이 유사하게 보이지만, 둘 사이에는 큰 차이점이 있다.
-
-### 12.4.3 함수 생성 시점과 함수 호이스팅
-
-```js
-//함수 참조
-console.dir(add); // f add(x,y)
-console.dir(sub); // undefined
-
-//함수 호출
-console.dir(add(2, 5)); // 7
-console.dir(sub(2, 5)); // TypeError: sub is not a function
-
-//함수 선언문
-function add(x,y) {
-  return x + y;
-}
-
-//함수 표현식
-var sub = function (x,y) {
-  return x - y;
+  
+  set fullName(name) {
+    [this.firstName, this.lastName] = name.split(' ');
+  }
 };
+
+console.log(person.fullName);  // Ungmo Lee
+
+person.fullName = 'Heegun Lee';
+
+console.log(person.fullName);  // Heegun Lee
+
+let descriptor = Object.getOwnPropertyDescriptor(person, 'fullName');
+console.log(descriptor);
+// {get: f, set: f, enumerable: true, configurable: true}
 ```
 
-- 함수 선언문은 호이스팅이 되고, 함수 표현식은 호이스팅 되지 않는다.
-  - 함수 호이스팅 : 함수 선언문이 코드 선두로 끌어 올려진 것처럼 동작하는 자바스크립트 고유의 특징
-    - cf 변수 호이스팅 : var로 선언된 변수는 최상위로 올라가서 undefined로 초기화 된다. 
-  - 함수 선언문으로 정의한 함수와 함수 표현식으로 정의한 함수의 생성 시점이 다르기 때문
-- 함수 선언문 : 런타임 이전에 함수 객체가 먼저 생성
-- 함수 표현식 : 변수에 할당문의 값은 할당문이 실행되는 시점, 즉 런타임에 평가가 되기 때문에 함수 객체가 미리 생성되지 않는다.
-  - 다면, var로 선언되었기에 변수 호이스팅은 발생한다.
+- fullName에 접근하면, getter/setter 가 호출됨
+- 접근자 프로퍼티는 [[Value]]를 가지지 않으며, 다만 데이터 프로퍼티의 값을 읽거나 저장할 때 관여함
+- fullName으로 프로퍼티 값에 접근하는 과정
+  - 프로퍼티키가 유효한지 확인 (문자열 또는 심벌)
+  - 프로토타입 체인에서 프로퍼티를 검색 (person 객체에 fullName 프로퍼티가 존재)
+  - 검색된 fullName 프로퍼티가 데이터 프로퍼티인지 접근자 프로퍼티인지 확인 (fullName은 접근자 프로퍼티)
+  - 접근자 프로퍼티 fullName의 프로퍼티 어트리뷰트 [[Get]]의 값, 즉 getter 함수를 호출하여 그 결과를 반환
 
-`함수 선언문 대신에 함수 표현식을 쓰는 것이 좋다. 함수가 선언되기 이전에 함수를 사용할 수 있게 되는 것은 문제를 야기 할 수 있고 예상치 못한 결과를 내는 코드가 될 수 있다.`
+> 프로토타입 prototype
+>
+> - 프로토타입은 어떤 객체의 상위 객체의 역할을 하는 객체
+>
+> - 프로토탕비은 하위 객체에게 자신의 프로퍼티와 메서드를 상속함
+> - 프로토타입 객체의 프로퍼티나 메서드를 상속받은 하위 객체는 자신의 프로퍼티 또는 메서드인 것 처럼 자유롭게 사용할 수 있음
+> - 프로토타입 체인은 포로토타입이 단방향 링크드 리스트 형태로 연결되어 있는 상속 구조를 의미
+> - 객체의 프로퍼티나 메서드에 접근하려고 할 때 해당 객체에 접근하려는 프로퍼티 또는 메서드가 없다면 프로토타입 체인을 따라 프로토타입의 프로퍼티나 메서드를 차례대로 검색함
 
-### 12.4.4 Function 생성자 함수
+접근자 프로퍼티와 데이터 프로퍼티를 구분하는 방법
 
-- 자바 스크립트의 기본 빌트인 함수인 Function 생성자 함수에 매개변수 목록과 함수 몸체를 문자열로 전달하면서 new 연산자와 함께 호출하면 함수 객체를 생성해서 반환함
+```js
+Object.getOwnPropertyDescriptor(Object.prototype, '__proto__'); // 일반 객체의 __proto__는 접근자 프로퍼티
+// {get: g, set: f, enumerable: false, configurable: true}
 
-  ```js
-  var add = new Function('x', 'y', 'return x + y');
-  
-  console.log(add(2,5)); // 7
-  ```
+Object.getOwnPropertyDescriptor(function() {}, 'prototype'); // 함수 객체의 prototype은 데이터 프로퍼티
+// {value: {...}, writable: true, enumerable: false, configurable: false}
+```
 
-  - Function 생성자 함수로 함수를 생성하는 방식은 일반적이지 않으며, 권장되지도 않음
+## 16.4 프로퍼티 정의
 
-  - Function 생성자 함수로 함수를 생성하면, 클로저를 생성하지 않음
+프로퍼티 정의
 
-    ```js
-    var add1 = (function() {
-      var a = 10;
-      return function(x, y) {
-        return x + y + a;
-      }
-    }());
-    
-    console.log(add1(1,2)) // 13
-    
-    var add2 = (function() {
-      var a = 10;
-      return new Function('x', 'y', 'return x + y + a;');
-    }());
-    
-    console.log(add1(1,2)) // ReferenceError: a is not defined
-    ```
+- 새로운 프로퍼티를 추가하면서 프로퍼티 어트리뷰트를 명시적으로 정의하거나, 기존 프로퍼티의 프로퍼티 어트리뷰트를 재정의하는 것
+- `Object.defineProperty(객체의 참조, 데이터 프로퍼티의 키, 프로퍼티 디스크립터 객체)` 메서드를 사용해서 프로퍼티의 어트리뷰트를 정의할 수 있음
 
-### 12.4.5 화살표 함수
+```js
+const person = {};
 
-- ES6에서 도입된 화살표 함수는 function 키워드 대신 화살표 `=>` 를 사용해 좀 더 간략한 방법으로 함수를 선언할 수 있다.
+// 데이터 프로퍼티 정의
+Object.defineProperty(person, 'firstName', {
+  value: 'Ungmo',
+  writable: true,
+  enumerable: true,
+  configurable: true
+});
 
-  ```js
-  const add = (x,y) => x + y;
-  console.log(add(2,3)); // 5
-  ```
+Object.defineProperty(person, 'lastName', {
+  value: 'Lee'
+});
 
-- 기존의 함수 선언문, 함수 표현식을 완전히 대체하기 위해 디자인 된 것은 아님
+let descriptor = Object.getOwnPropertyDescriptor(person, 'firstName');
+console.log('firstName', descriptor);
+// firstName {value: "Ungmo", writable: true, enumerable: true, configurable: true}
 
-- 화살표 함수는 표현뿐만 아니라, 내부 동작 또한 간략화 되어 있어 차이가 존재한다.
+// 디스크립터 객체의 프로퍼티를 누락시키면 undefined, false가 기본값이다.
+descriptor = Object.getOwnPropertyDescriptor(person, 'lastName');
+console.log('lastName', descriptor);
+// lastName {value: "Lee", writable: false, enumerable: false, configurable: false}
 
-  - 화살표 함수는 생성자 함수로 사용할 수 없음
-  - this 바인딩 방식이 기존 함수와는 다름
-  - prototype 프로퍼티가 없음
-  - arguments 객체를 생성하지 않음
+// [[Enumerable]]의 값이 false인 경우
+// 해당 프로퍼티는 for...in 문이나 Object.keys 등으로 열거할 수 없다.
+// lastName 프로퍼티는 [[Enumerable]]의 값이 false이므로 열거되지 않는다.
+console.log(Object.keys(person)); // ["firstName"]
+
+// [[Writable]]의 값이 false인 경우 해당 프로퍼티의 [[Value]]의 값을 변경할 수 없다.
+// lastName 프로퍼티는 [[Writable]]의 값이 false이므로 값을 변경할 수 없다.
+// 이때 값을 변경하면 에러는 발생하지 않고 무시된다.
+person.lastName = 'Kim';
+
+// [[Configurable]]의 값이 false인 경우 해당 프로퍼티를 삭제할 수 없다.
+// lastName 프로퍼티는 [[Configurable]]의 값이 false이므로 삭제할 수 없다.
+// 이때 프로퍼티를 삭제하면 에러는 발생하지 않고 무시된다.
+delete person.lastName;
+
+// [[Configurable]]의 값이 false인 경우 해당 프로퍼티를 재정의할 수 없다.
+// Object.defineProperty(person, 'lastName', { enumerable: true });
+// Uncaught TypeError: Cannot redefine property: lastName
+
+descriptor = Object.getOwnPropertyDescriptor(person, 'lastName');
+console.log('lastName', descriptor);
+// lastName {value: "Lee", writable: false, enumerable: false, configurable: false}
+
+// 접근자 프로퍼티 정의
+Object.defineProperty(person, 'fullName', {
+  // getter 함수
+  get() {
+    return `${this.firstName} ${this.lastName}`;
+  },
+  // setter 함수
+  set(name) {
+    [this.firstName, this.lastName] = name.split(' ');
+  },
+  enumerable: true,
+  configurable: true
+});
+
+descriptor = Object.getOwnPropertyDescriptor(person, 'fullName');
+console.log('fullName', descriptor);
+// fullName {get: ƒ, set: ƒ, enumerable: true, configurable: true}
+
+person.fullName = 'Heegun Lee';
+console.log(person); // {firstName: "Heegun", lastName: "Lee"}
+```
+
+프로퍼티 디스크립터 객체에서 어트리뷰트를 생략하면 아래와 같이 기본 값이 적용됨
+
+| 프로퍼티 디스크립터 객체의 프로퍼티 | 대응하는 프로퍼티 어트리뷰트 | 생략했을 때의 기본값 |
+| ----------------------------------- | ---------------------------- | -------------------- |
+| value                               | [[Value]]                    | undefined            |
+| get                                 | [[Get]]                      | undefined            |
+| set                                 | [[Set]]                      | undefined            |
+| writable                            | [[Writable]]                 | false                |
+| enumerable                          | [[Enumerable]]               | false                |
+| configurable                        | [[Configurable]]             | false                |
+
+`defineProperties(객체의 참조, 여러개의 프로퍼티 객체)`
+
+```js
+const person = {};
+
+Object.defineProperties(person, {
+  // 데이터 프로퍼티 정의
+  firstName: {
+    value: 'Ungmo',
+    writable: true,
+    enumerable: true,
+    configurable: true
+  },
+  lastName: {
+    value: 'Lee',
+    writable: true,
+    enumerable: true,
+    configurable: true
+  },
+  // 접근자 프로퍼티 정의
+  fullName: {
+    // getter 함수
+    get() {
+      return `${this.firstName} ${this.lastName}`;
+    },
+    // setter 함수
+    set(name) {
+      [this.firstName, this.lastName] = name.split(' ');
+    },
+    enumerable: true,
+    configurable: true
+  }
+});
+
+person.fullName = 'Heegun Lee';
+console.log(person); // {firstName: "Heegun", lastName: "Lee"}
+```
+
+## 16.5 객체 변경 방지
+
+객체는 변경가능한 값이므로, 재할당 없이 직접 변경할 수 있음
+
+즉, 프로퍼티를 추가/삭제/갱신이 가능하며, Object.defineProperty 메서드를 사용하여 프로퍼티 어트리뷰트를 재정의 할 수도 있음
+
+자바스크립트는 객체의 변경을 방지하는 다양한 메서드를 제공함
+
+| 구분           | 메서드                   | 추가 | 삭제 | 읽기 | 쓰기 | 프로퍼티 어트리뷰트 재정의 |
+| -------------- | ------------------------ | ---- | ---- | ---- | ---- | -------------------------- |
+| 객체 확장 금지 | Obejct.preventExtensions | X    | O    | O    | O    | O                          |
+| 객체 밀봉      | Object.seal              | X    | X    | O    | O    | X                          |
+| 객체 동결      | Object.freeze            | X    | X    | O    | X    | X                          |
+
+### 16.5.1 객체 확장 금지
+
+`Obejct.preventExtensions`
+
+- 객체의 확장(프로퍼티의 추가)를 금지
+  - 프로퍼티 동적 추가, Object.defineProperty 두가지 방법 모두 금지
+- `Object.isExtensible`로 확장가능한 객체인지 확인이 가능함
+
+```js
+const person = { name: 'Lee' };
+
+// person 객체는 확장이 금지된 객체가 아니다.
+console.log(Object.isExtensible(person)); // true
+
+// person 객체의 확장을 금지하여 프로퍼티 추가를 금지한다.
+Object.preventExtensions(person);
+
+// person 객체는 확장이 금지된 객체다.
+console.log(Object.isExtensible(person)); // false
+
+// 프로퍼티 추가가 금지된다.
+person.age = 20; // 무시. strict mode에서는 에러
+console.log(person); // {name: "Lee"}
+
+// 프로퍼티 추가는 금지되지만 삭제는 가능하다.
+delete person.name;
+console.log(person); // {}
+
+// 프로퍼티 정의에 의한 프로퍼티 추가도 금지된다.
+Object.defineProperty(person, 'age', { value: 20 });
+// TypeError: Cannot define property age, object is not extensible
+```
+
+### 16.5.2 객체 밀봉
+
+`Object.seal`
+
+- 객체의 프로퍼티 추가/삭제/프로퍼티 어트리뷰트 재정의를 금지
+- 즉, 객체의 프로퍼티 읽기/쓰기만 가능
+- `Object.isSealed` 메서드로 확인이 가능함
+
+```js
+const person = { name: 'Lee' };
+
+// person 객체는 밀봉(seal)된 객체가 아니다.
+console.log(Object.isSealed(person)); // false
+
+// person 객체를 밀봉(seal)하여 프로퍼티 추가, 삭제, 재정의를 금지한다.
+Object.seal(person);
+
+// person 객체는 밀봉(seal)된 객체다.
+console.log(Object.isSealed(person)); // true
+
+// 밀봉(seal)된 객체는 configurable이 false다.
+console.log(Object.getOwnPropertyDescriptors(person));
+/*
+{
+  name: {value: "Lee", writable: true, enumerable: true, configurable: false},
+}
+*/
+
+// 프로퍼티 추가가 금지된다.
+person.age = 20; // 무시. strict mode에서는 에러
+console.log(person); // {name: "Lee"}
+
+// 프로퍼티 삭제가 금지된다.
+delete person.name; // 무시. strict mode에서는 에러
+console.log(person); // {name: "Lee"}
+
+// 프로퍼티 값 갱신은 가능하다.
+person.name = 'Kim';
+console.log(person); // {name: "Kim"}
+
+// 프로퍼티 어트리뷰트 재정의가 금지된다.
+Object.defineProperty(person, 'name', { configurable: true });
+// TypeError: Cannot redefine property: name
+```
+
+### 16.5.3 객체 동결
+
+`Object.freeze`
+
+- 객체를 동결한다.
+- 객체를 읽는 것만 가능하게 만든다.
+- `Object.isFrozen`으로 확인이 가능
+
+```js
+const person = { name: 'Lee' };
+
+// person 객체는 동결(freeze)된 객체가 아니다.
+console.log(Object.isFrozen(person)); // false
+
+// person 객체를 동결(freeze)하여 프로퍼티 추가, 삭제, 재정의, 쓰기를 금지한다.
+Object.freeze(person);
+
+// person 객체는 동결(freeze)된 객체다.
+console.log(Object.isFrozen(person)); // true
+
+// 동결(freeze)된 객체는 writable과 configurable이 false다.
+console.log(Object.getOwnPropertyDescriptors(person));
+/*
+{
+  name: {value: "Lee", writable: false, enumerable: true, configurable: false},
+}
+*/
+
+// 프로퍼티 추가가 금지된다.
+person.age = 20; // 무시. strict mode에서는 에러
+console.log(person); // {name: "Lee"}
+
+// 프로퍼티 삭제가 금지된다.
+delete person.name; // 무시. strict mode에서는 에러
+console.log(person); // {name: "Lee"}
+
+// 프로퍼티 값 갱신이 금지된다.
+person.name = 'Kim'; // 무시. strict mode에서는 에러
+console.log(person); // {name: "Lee"}
+
+// 프로퍼티 어트리뷰트 재정의가 금지된다.
+Object.defineProperty(person, 'name', { configurable: true });
+// TypeError: Cannot redefine property: name
+```
+
+### 16.5.4 불변 객체
+
+지금까지 살펴본 방지 메서드들은 얕은 변경만을 방지한다.
+
+즉, 직속 프로퍼티만 변경이 방지되고, 중첩된 객체까지는 영향을 주지 못한다.
+
+```js
+const person = {
+  name: 'Lee',
+  address: { city: 'Seoul' }
+};
+
+// 얕은 객체 동결
+Object.freeze(person);
+
+// 직속 프로퍼티만 동결한다.
+console.log(Object.isFrozen(person)); // true
+// 중첩 객체까지 동결하지 못한다.
+console.log(Object.isFrozen(person.address)); // false
+
+person.address.city = 'Busan';
+console.log(person); // {name: "Lee", address: {city: "Busan"}}
+```
+
+객체의 중첩 객체까지 동결하려면, 객체를 값으로 가지는 모든 프로퍼티에 대해 Object.freeze 메서드를 재귀적으로 호출하여 적용하면 된다.
+
+```js
+function deepFreeze(target) {
+  // 객체가 아니거나 동결된 객체는 무시하고 객체이고 동결되지 않은 객체만 동결한다.
+  if (target && typeof target === 'object' && !Object.isFrozen(target)) {
+    Object.freeze(target);
+    /*
+      모든 프로퍼티를 순회하며 재귀적으로 동결한다.
+      Object.keys 메서드는 객체 자신의 열거 가능한 프로퍼티 키를 배열로 반환한다.
+      ("19.15.2. Object.keys/values/entries 메서드" 참고)
+      forEach 메서드는 배열을 순회하며 배열의 각 요소에 대하여 콜백 함수를 실행한다.
+      ("27.9.2. Array.prototype.forEach" 참고)
+    */
+    Object.keys(target).forEach(key => deepFreeze(target[key]));
+  }
+  return target;
+}
+
+const person = {
+  name: 'Lee',
+  address: { city: 'Seoul' }
+};
+
+// 깊은 객체 동결
+deepFreeze(person);
+
+console.log(Object.isFrozen(person)); // true
+// 중첩 객체까지 동결한다.
+console.log(Object.isFrozen(person.address)); // true
+
+person.address.city = 'Busan';
+console.log(person); // {name: "Lee", address: {city: "Seoul"}}
+```
 
