--- a/27.9.2~.md
+++ b/27.9.2~.md
@@ -130,7 +130,21 @@
 - forEach 메서드의 폴리필
 
   ```js
-  // 만약 Array.prototype에 forEach 메서드가 존재하지 않으면 폴리필을 추가한다. if (!Array.prototype.forEach) {	Array.prototype.forEach = function (callback, thisArg) {     // 첫 번째 인수가 함수가 아니면 TypeError를 발생시킨다.	if (typeof callback !== 'function') {		throw new TypeError(callback + ' is not a function'); }        // this로 사용할 두 번째 인수를 전달받지 못하면 전역 객체를 this로 사용한다.     thisArg = thisArg || window;    // for 문으로 배열을 순회하면서 콜백 함수를 호출한다.     for (var i = 0; i < this.length; i++) {			// call 메서드를 통해 thisArg를 전달하면서 콜백 함수를 호출한다.       // 이때 콜백 함수의 인수로 배열 요소, 인덱스, 배열 자신을 전달한다.       callback.call(thisArg, this[i], i, this);    }  };}
+  // 만약 Array.prototype에 forEach 메서드가 존재하지 않으면 폴리필을 추가한다. 
+  if (!Array.prototype.forEach) {	
+    Array.prototype.forEach = function (callback, thisArg) {     
+    // 첫 번째 인수가 함수가 아니면 TypeError를 발생시킨다.	
+    if (typeof callback !== 'function') {		
+      throw new TypeError(callback + ' is not a function'); }        
+    // this로 사용할 두 번째 인수를 전달받지 못하면 전역 객체를 this로 사용한다.     
+    thisArg = thisArg || window;    
+    // for 문으로 배열을 순회하면서 콜백 함수를 호출한다.     
+    for (var i = 0; i < this.length; i++) {			
+      // call 메서드를 통해 thisArg를 전달하면서 콜백 함수를 호출한다.       
+      // 이때 콜백 함수의 인수로 배열 요소, 인덱스, 배열 자신을 전달한다.       
+      callback.call(thisArg, this[i], i, this);    
+    }  
+  };}
   ```
 
   - forEach 메서드도 내부에서는 반복문(for 문)을 통해 배열을 순회
@@ -140,7 +154,11 @@
 - break,continue문을 사용할 수 없음
 
   ```js
-  [1, 2, 3].forEach(item => {   console.log(item);  if (item > 1) break; // SyntaxError: Illegal break statement });[1, 2, 3].forEach(item => {	console.log(item);	if (item > 1) continue;	// SyntaxError: Illegal continue statement: no surrounding iteration statement });
+  [1, 2, 3].forEach(item => {   console.log(item);  if (item > 1) break; 
+                             // SyntaxError: Illegal break statement 
+                            });
+                             [1, 2, 3].forEach(item => {	console.log(item);	if (item > 1) continue;	
+                                                        // SyntaxError: Illegal continue statement: no surrounding iteration statement });
   ```
 
 - 희소배열의 경우 존재하지 않는 요소는 순회대상에서 제외 (map. filter, reduce 메서드 등에서도 마찬가지)
@@ -148,7 +166,12 @@
   - ? 폴리필에서는 그런내용은 없는거 같은데
 
   ```js
-  // 희소 배열const arr = [1, , 3];// for 문으로 희소 배열을 순회for (let i = 0; i < arr.length; i++) {  console.log(arr[i]); // 1, undefined, 3 }// forEach 메서드는 희소 배열의 존재하지 않는 요소를 순회 대상에서 제외한다. arr.forEach(v => console.log(v)); // 1, 3
+  // 희소 배열
+  const arr = [1, , 3];
+  // for 문으로 희소 배열을 순회
+  for (let i = 0; i < arr.length; i++) {  console.log(arr[i]); 
+                                    // 1, undefined, 3 }// forEach 메서드는 희소 배열의 존재하지 않는 요소를 순회 대상에서 제외한다. 
+                                        arr.forEach(v => console.log(v)); // 1, 3
   ```
 
 -  forEach 메서드는 for 문에 비해 성능은 좋지 않지만 가독성이 더 좋음
