46_제너레이터

--- a/46.md
+++ b/46.md
@@ -110,7 +110,7 @@ const generator2 = genFunc();
 console.log(generator2.next()); // {value: 1, done: false}
 console.log(generator2.throw('Error!')); // {value: undefined, done: true}
 ```
-![image-20220109002638231](/Users/jojunhyeong/Workspace/deepdive_study/images/image-20220109002638231.png)
+![image-20220109002638231](./images/image-20220109002638231.png)
 
 ## 46.4 제너레이터의 일시 중지와 재개
 제너레이터는 함수 호출자가 yield 키워드와 next 메서드를 통해 실행을 일시 중지했다가, 필요한 시점에 다시 재개할 수 있음
